# strong-vibes-prints

./: .gitignore  AGENTS.md  ATTRIBUTION.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  EXPORTING.md  README.md  SECURITY.md  TRADEMARK.md  pyproject.toml  requirements.txt
.github/workflows/: pages.yml
docs/: index.html  strong_vibes_boss.glb  strong_vibes_holder.glb  strong_vibes_socket_180.glb  strong_vibes_socket_30.glb
parts/connect/: README.md  connect_test.py
parts/connect/release/: strong_vibes_boss-1.0.0.step  strong_vibes_boss-1.0.0.stl  strong_vibes_socket_180-1.0.0.step  strong_vibes_socket_180-1.0.0.stl  strong_vibes_socket_30-1.0.0.step  strong_vibes_socket_30-1.0.0.stl
parts/holder/: README.md  strong_vibes_holder.py
parts/holder/release/: strong_vibes_holder-2.0.0.stl
strongvibes/: __init__.py  strong_vibes_connect.py
